--- a/argocd-helm-charts/capi-cluster/charts/hetzner/values.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/values.yaml
@@ -1,27 +1,103 @@
-cloudCredentialsSecretName: cloud-credentials
+global:
+  clusterName: kubeaid-demo-hetzner-robot
 
-hcloud:
-  sshKeyName: kubeaid-demo-hetzner-cluster # Mandatory, even if hcloud.enabled is set to false.
-  enabled: true
-  controlPlane:
-    endpoint:
-      host: ""
-    loadBalancer:
-      enabled: true
-      region: fsn1
-    regions:
-      - fsn1
-    machineType: cax11
-    replicas: 3
-  network:
-    zone: eu-central
-  nodeGroups: []
+kubernetesVersion: v1.31.0
 
-robot:
-  enabled: false
-  sshKeysSecretName: hetzner-robot-ssh-keys
+imageName: ubuntu-24.04
+
+controlPlaneType: baremetal
+controlPlaneMachineCount: 3
+controlPlaneMachineType: cax41
+
+workerMachineType: cax41
+workerMachineCount:
+  baremetal: 0
+  hcloud: 0
+includeWorker:
+  hcloud: false
+  baremetal: true
+
+remediation:
+  enabled:
+    hcloud: true
+    baremetal: true
+  hcloud:
+    controlPlane:
+      retryLimit: 1
+      timeout: 180s
+      type: Reboot
+      maxUnhealthy: 100%
+      nodeStartupTimeout: 15m
+    worker:
+      retryLimit: 1
+      timeout: 180s
+      type: Reboot
+      maxUnhealthy: 100%
+      nodeStartupTimeout: 15m
+  baremetal:
+    controlPlane:
+      retryLimit: 2
+      timeout: 300s
+      type: Reboot
+      maxUnhealthy: 100%
+      nodeStartupTimeout: 60m
+    worker:
+      retryLimit: 2
+      timeout: 300s
+      type: Reboot
+      maxUnhealthy: 100%
+      nodeStartupTimeout: 60m
+
+baremetalHosts:
+  WithRaid:
+  # Is integer.
+  - serverID: "***"
+    role: control-plane
+    description: "Control Plane Node 1"
+    # Is hexadecimal.
+    wwn:
+    - "0x***"
+    - "0x***"
+  - serverID: "***"
+    role: control-plane
+    description: "Control Plane Node 2"
+    wwn:
+    - "0x***"
+    - "0x***"
+  - serverID: "***"
+    role: control-plane
+    description: "Control Plane Node 3"
+    wwn:
+    - "0x***"
+    - "0x***"
+
+installImage:
   controlPlane:
-    endpoint:
-      host: ""
-    nodes: []
-  nodeGroups: []
+    imagePath: /root/.oldroot/nfs/images/Ubuntu-2204-jammy-amd64-base.tar.gz
+    rootPartitionSize: all
+    swRaid: 1
+  worker:
+    imagePath: /root/.oldroot/nfs/images/Ubuntu-2204-jammy-amd64-base.tar.gz
+    rootPartitionSize: all
+    swRaid: 1
+
+ssh:
+  # Name of the SSH key present in the HCloud console that will be added to the HCloud server.
+  keyName: cluster
+  # Keys related to the secret with the name robotRescueSecretName.
+  robotRescueSecretKey:
+    # Name of the SSH key present in the HCloud console and its content.
+    name: sshkey-name
+    privateKey: ssh-privatekey
+    publicKey: ssh-publickey
+  # Name of the secret holding details of the SSH key that will be added to the baremetal Hetzner server.
+  robotRescueSecretName: robot-ssh
+
+hcloudRegion: hel1
+
+# Secret holding credentials related to the Hetzner console login.
+hetznerSecretName: hetzner
+hetznerSecretKey:
+  hcloudToken: hcloud
+  hetznerRobotPassword: robot-password
+  hetznerRobotUser: robot-user
