fix: reduce repeat_interval to 5m for obmondo route
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/prometheus-linuxaid/values.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/values.yaml
@@ -96,6 +96,7 @@ alertmanager:
       - receiver: 'obmondo'
         matchers:
         - "alertname = Watchdog"
+        repeat_interval: 5m
       - receiver: 'null'
         matchers:
         - "namespace =~ testing|obmondo-ci"
