feat(capi-cluster/azure) : adding option to specify image ID
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureMachineTemplate.yaml
@@ -6,6 +6,10 @@ spec:
   template:
     spec:
       vmSize: {{ .Values.controlPlane.vmSize }}
+      {{- if .Values.imageID }}
+      image:
+        id: {{ .Values.imageID }}
+      {{- end }}
       osDisk:
         diskSizeGB: {{ .Values.controlPlane.diskSizeGB }}
         osType: Linux
@@ -30,6 +34,10 @@ spec:
   template:
     spec:
       vmSize: {{ $nodeGroup.vmSize }}
+      {{- if $.Values.imageID }}
+      image:
+        id: {{ $.Values.imageID }}
+      {{- end }}
       osDisk:
         diskSizeGB: {{ $nodeGroup.diskSizeGB }}
         osType: Linux
