--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/cluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/cluster.yaml
@@ -6,7 +6,7 @@ spec:
   clusterNetwork:
     pods:
       cidrBlocks:
-        - 10.244.0.0/16
+        - {{ .Values.global.pods.cidrBlock | default "10.244.0.0/16" }}
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
     kind: HetznerCluster
