--- a/argocd-helm-charts/ccm-hetzner/values.yaml
+++ b/argocd-helm-charts/ccm-hetzner/values.yaml
@@ -1,2 +1,7 @@
-secret:
-  name: cloud-credentials
+hcloud-cloud-controller-manager:
+  env:
+    HCLOUD_TOKEN:
+      valueFrom:
+        secretKeyRef:
+          name: cloud-credentials
+          key: hcloud
