granting read allowance for resources in storage APIGroup to Cluster AutoScaler
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/cluster-autoscaler/templates/clusterrole.yaml
+++ b/argocd-helm-charts/cluster-autoscaler/templates/clusterrole.yaml
@@ -11,13 +11,25 @@ rules:
     resources:
     {{- if .Values.enableClusterAPIScaleFromZeroSupport.aws }}
     - awsmachinetemplates
-    {{- else if .Values.enableClusterAPIScaleFromZeroSupport.hcloud }}
-    - hcloudmachinetemplates
     {{- else if .Values.enableClusterAPIScaleFromZeroSupport.azure }}
     - azuremachinetemplates
+    {{- else if .Values.enableClusterAPIScaleFromZeroSupport.hcloud }}
+    - hcloudmachinetemplates
     {{- end }}
     verbs:
     - get
     - list
     - watch
+  - apiGroups:
+      - storage.k8s.io
+    resources:
+      - storageclasses
+      - csinodes
+      - csidrivers
+      - csistoragecapacities
+      - volumeattachments
+    verbs:
+      - get
+      - list
+      - watch
 {{- end -}}
