--- a/argocd-helm-charts/vuls-dictionary/templates/pvc.yaml
+++ b/argocd-helm-charts/vuls-dictionary/templates/pvc.yaml
@@ -12,7 +12,7 @@ metadata:
 {{- end }}
 spec:
   accessModes:
-    - {{ .Values.persistence.accessMode | default "ReadWriteOnce" }}
+    - {{ .Values.persistence.accessMode | default "ReadWriteMany" }}
   resources:
     requests:
       storage: {{ .Values.persistence.size |  default "1Gi" }}
