adding load-balancer support to ciso-assistant
Signed-off-by: Sanskar Bhushan <sanskar@obmondo.com>

--- a/argocd-helm-charts/ciso-assistant/charts/ciso-assistant/values.yaml
+++ b/argocd-helm-charts/ciso-assistant/charts/ciso-assistant/values.yaml
@@ -45,3 +45,9 @@ persistence:
 
 ingress:
   enabled: false
+
+service:
+  type: ClusterIP
+  loadBalancer:
+    enabled: false
+    annotations: {}
