--- a/argocd-helm-charts/ciso-assistant/values.yaml
+++ b/argocd-helm-charts/ciso-assistant/values.yaml
@@ -7,3 +7,8 @@ ciso-assistant:
     enabled: true
   caddy:
     enabled: false
+
+service:
+  loadBalancer:
+    enabled: true
+    annotations: {}
